--- a/ucf-exchange.cabal
+++ b/ucf-exchange.cabal
@@ -29,10 +29,11 @@ executable ucf-exchange-exe
 
 test-suite ucf-exchange-test
   type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
+  hs-source-dirs:      test, src
   main-is:             Spec.hs
   build-depends:       base
                      , ucf-exchange
+                     , HUnit
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
